--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -8,7 +8,7 @@ header {
     .logo {
         display: flex;
         align-items: center;
-        margin: 0 1rem;
+        margin-right: 1rem;
         padding-bottom: 0.5rem;
         
         font-size: 1.6rem;
@@ -20,7 +20,7 @@ header {
             margin-right: 0.5rem;
         }
 
-        span {
+        span.mark{
             color: var(--blue);
             transition: color 0.25s ;
             font-weight: bold;
